--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ositrova.github.io/goit-react-hw-07-phonebook/",
+  "homepage": "https://ositrova.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "formik": "^2.2.9",
     "modern-normalize": "^1.1.0",
     "nanoid": "^4.0.1",
     "prop-types": "^15.8.1",
@@ -16,11 +17,13 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
